Fix headers on smaller screens
This is regarding the following issue: [Portfolio-Iro on Smaller Devices](https://github.com/Bloc/curriculum/issues/3096)

--- a/_sass/base/_global.scss
+++ b/_sass/base/_global.scss
@@ -34,6 +34,7 @@ h1, h2, h3, h4, h5, h6 {
   a {
     color: $text-color;
   }
+  word-wrap: normal;
 }
 h1 {
   font-size: 2.5em;
